# leptos-unique-ids

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  README.tpl  lychee.toml  rust-toolchain.toml
.github/workflows/: ci.yml  pre-commit-autoupdate.yml
lints/: Cargo.toml
lints/helpers/: Cargo.toml
lints/helpers/src/: lib.rs
lints/literal_as_id_attribute_value/: Cargo.toml  README.md
lints/literal_as_id_attribute_value/src/: lib.rs
lints/literal_as_id_attribute_value/ui/: view.rs  view.stderr
lints/src/: lib.rs
lints/tt_as_id_attribute_value/: Cargo.toml  README.md
lints/tt_as_id_attribute_value/src/: lib.rs
lints/tt_as_id_attribute_value/ui/: view.rs  view.stderr
src/: lib.rs  pascal_case.rs
tests/: Cargo.toml
tests/src/: leptos_unique_ids.rs  lib.rs  tests.rs
tests/ui/fail/: duplicated_id.rs  duplicated_id.stderr  empty.rs  empty.stderr  empty_id.rs  empty_id.stderr  ids_delimiter_punct.rs  ids_delimiter_punct.stderr  incorrect_enum_name.rs  incorrect_enum_name.stderr
tests/ui/pass/: basic.rs
