[package]
name = "tt_as_id_attribute_value"
version = "0.1.0"
authors = ["Álvaro Mondéjar Rubio"]
description = "Check for token trees passed as id attribute values (except for `Ids` enum variants)."
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "tt_as_id_attribute_value_view"
path = "ui/view.rs"

[dependencies]
clippy_utils.workspace = true
dylint_linting.workspace = true
lints-helpers.workspace = true

[dev-dependencies]
dylint_testing.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true

[features]
rlib = ["dylint_linting/constituent"]

[lints]
workspace = true
